# pyshred-legacy

./: .gitattributes  .gitignore  LICENSE  PySHRED_SST.ipynb  README.md  ReconstructorVersusPredictor-Copy1.ipynb  ReconstructorVersusPredictor.ipynb  environment.yml  example.ipynb  parametric_shred.ipynb  pyproject.toml  setup.py  shred_testing copy.ipynb  shred_testing.ipynb  standard_shred copy.ipynb  standard_shred.ipynb
docs/source/: conf.py  index.rst  modules.rst  processing.rst
examples/: ModularSHRED_tut.ipynb  Parametric_SHRED_tut.ipynb  PySHRED_SST.ipynb  SST_Tutorial SindySHRED.ipynb  SST_Tutorial.ipynb  SindySHRED_tut.ipynb  example_helper.py  parametric_shred.ipynb  standard_shred.ipynb
misc/: example_helper.py
models/: models.py
models/decoder_models/: sdn_model.py
models/sequence_models/: transformer_model.py
models/shred_models/: __init__.py
models/shred_models/forecaster/: forecaster.py  sensor_forecaster.py
models/shred_models/reconstructor/: reconstructor.py
models/shred_models/shred/: models.py  process_data.py  shred.py  shred_wrapper.py
processing/: all_data_manager.py  all_data_processor.py  data_manager.py  data_processor.py  old_parametric_data_processor.py  parametric_data_manager.py  parametric_data_processor.py  test_data_manager.py  utils.py
pyshred/: .flake8  __init__.py
pyshred/datasets/: __init__.py  sst_data.npy
pyshred/models/: __init__.py  forecaster.py  models.py  reconstructor.py
pyshred/models/decoder_models/: __init__.py
pyshred/models/sequence_models/: __init__.py  gru_model.py  lstm_model.py  timeseries_transformer_model.py  transformer_model.py
pyshred/models/shred_models/: __init__.py  reconstructor.py  sensor_forecaster.py  shred.py  sindy_reconstructor.py  sindy_shred.py
pyshred/models/sindy_models/: sindy.py
pyshred/processing/: __init__.py  data_manager.py  data_processor.py  parametric_data_manager.py  parametric_data_processor.py  utils.py
pyshred_older_files/: modular_pyshred.ipynb  multiple_dataset_checkpoints.ipynb  pyshred_dataloader.ipynb
pyshred_older_files/pyshred/core/: abstract_shred.py  evaluation.py  training.py
pyshred_older_files/pyshred/data_processor/: __init__.py  data_loader.py  data_processor.py
pyshred_older_files/pyshred/datasets/: __init__.py  load_data.py
pyshred_older_files/pyshred/decoder_models/: __init__.py  sdn_model.py  unet_model.py
pyshred_older_files/pyshred/models/: __init__.py  abstract_shred.py  models.py  reconstruction_result.py  shred.py
pyshred_older_files/pyshred/sequence_models/: lstm_model.py  timeseries_transformer_model.py
(+5 files in other folders)
